2013-09-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/modhpsol.spad.pamphlet,
	src/algebra/rec.spad.pamphlet: Minor cleanups.

2013-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fs2ups.spad.pamphlet: Add expander
	for undefined functions.
	src/input/series3.input: New file.
	src/input/Makefile.in: Adjust.

2013-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fspace.spad.pamphlet: More efficient
	equality for formal derivatives.

2013-09-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/primitives.lisp: Fix problem with gcl-2.6.9
	and up.

2013-09-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/combfunc.spad.pamphlet: Fix derivatives
	of Whittaker functions.

2013-09-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intrf.spad.pamphlet,
	src/algebra/intef.spad.pamphlet: Preliminary support for
	integrating lambertW.
	src/input/integ.input, src/input/pmint.input: Update tests.

2013-09-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/serexp.spad.pamphlet,
	src/algebra/combfunc.spad.pamphlet,
	src/algebra/fs2ups.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/mrv_limit.spad.pamphlet: Handle a few tractable
	functions.
	src/algebra/limitps.spad.pamphlet: Use 'mrv_limit' more.
	src/input/limit.input: New file.
	src/input/Makefile.in: Adjust.

2013-09-09  Franz Lehner  <lehner@math.tugraz.at>

	* src/algebra/distro.spad.pamphlet: missing conditional
	fixed.

2013-09-03  Franz Lehner  <lehner@math.tugraz.at>

	* src/algebra/distro.spad.pamphlet, src/algebra/distro.input: 
	cleanup of moment package and missing transformation from
	monotone cumulants to moments added.

2013-08-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/divisor.spad.pamphlet: More efficient
	modular rowEchelon.

2013-08-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/lisp/num_gmp.lisp: Compile Clozure CL GMP support
	only on AMD64.
