@@ -1,5 +1,10 @@
 2013-09-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/lisp/primitives.lisp: Allow floating point
+	optimizations for Clozure CL 1.8 and up.
+
+2013-09-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/modhpsol.spad.pamphlet,
 	src/algebra/rec.spad.pamphlet: Minor cleanups.
 
